WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46501
Variable declarations inside a catch scope don't get propogated to the parent scope
https://bugs.webkit.org/show_bug.cgi?id=46501
Summary
Variable declarations inside a catch scope don't get propogated to the parent...
Oliver Hunt
Reported
2010-09-24 12:56:54 PDT
Variable declarations inside a catch scope don't get propogated to the parent scope
Attachments
Patch
(5.75 KB, patch)
2010-09-24 13:38 PDT
,
Oliver Hunt
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2010-09-24 13:38:13 PDT
Created
attachment 68739
[details]
Patch
Geoffrey Garen
Comment 2
2010-09-24 13:42:30 PDT
Comment on
attachment 68739
[details]
Patch r=me
Oliver Hunt
Comment 3
2010-09-24 13:55:10 PDT
Committed
r68288
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug